<resources>
    <string name="app_name">testing wireless</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ok">OK</string>
    <string name="absensi_membutuhkan_info_lokasi">Absensi Membutuhkan Info Lokasi</string>
    <string name="nama_mahasiswa">Loading...</string>
    <string name="nim_mahasiswa">Loading...</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="copyright">"Copyright © 2023 Teknik Informatika  Universitas Palangka Raya "</string>
    <string name="jurusan">Jurusan</string>
    <string name="longtitude">Longtitude</string>
    <string name="lokasi">Lokasi :</string>
    <string name="longtitude1">Longtitude :</string>
    <string name="latitude1">Latitude :</string>
    <string name="latitude">Latitude</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invalid_email">Email Invalid</string>
    <string name="empty_email">Insert Email</string>
    <string name="empty_password">Insert Password</string>
    <string name="password_length">Password must be more than 6 character</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="log_in">Log In</string>
    <string name="enter_email">Insert your email</string>
    <string name="enter_pass">Insert your password</string>
    <string name="cek_akun">Do not have an account</string>
    <string name="register">Register</string>
    <string name="punya_akun">Already have an account?</string>
    <string name="link_login">Login Now!</string>
    <string name="nama">Nama</string>
    <string name="nim">NIM</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Log Out</string>
    <string name="history">History</string>
    <string name="link_register">Register Now!</string>
    <string name="tanggal">Tanggal</string>
    <string name="txt_jurusan">Jurusan :</string>
    <string name="txt_latitude">Latitude :</string>
    <string name="txt_long">Longtitude :</string>
    <string name="longitude1">Longitude :</string>
    <string name="longitude">Longitude</string>
    <string name="register_now">Register Now</string>
    <string name="masukkan_nama">Insert Name</string>
    <string name="masukkan_nim">Insert NIM</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lokasiText">lokasi</string>
    <string name="namamahasiswa">Nama :</string>
    <string name="nimmahasiswa">Nim :</string>
    <string name="lokasimahasiswa">Lokasi :</string>
    <string name="waktuonline">Waktu Online :</string>
</resources>