<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HomeActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16sp"
            android:text="@string/absensi_membutuhkan_info_lokasi"
            android:fontFamily="@font/poppins"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="avatar"
            app:srcCompat="@drawable/baseline_account_circle_24" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16sp"
            android:text="@string/nama_mahasiswa"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32sp"
            android:text="@string/nim_mahasiswa"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/check_in"
            android:fontFamily="@font/poppins_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:background="@drawable/home_check_in_button"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/check_out"
            android:background="@drawable/home_check_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="24dp"
            android:text="@string/check_out"
            android:fontFamily="@font/poppins_medium"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>